<resources>
    <string name="app_name">Washi</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="txt_content">Conteúdo aqui</string>
    <string name="txt_intro_login">Entre para vivenciar a \n melhor experiência</string>
    <string name="txt_label_new">Sou novo por aqui</string>
    <string name="txt_getting_started">Começar</string>

    <string name="txt_washi">Washi</string>
    <string name="txt_label_email">Digite seu e-mail</string>
    <string name="txt_email_tint">ex: @gmail.com</string>
    <string name="txt_label_password">Senha</string>
    <string name="txt_label_login">Entrar</string>
    <string name="txt_label_typed_password">Digite sua senha</string>
    <string name="label_wash">Lavar</string>
    <string name="label_dry">Passar</string>
    <string name="label_delivery">Entregar</string>
    <string name="label_activities">Atividades</string>

    <string name="label_hello">Olá,</string>
    <string name="intro_message">Escolha um dos nossos serviços que você tem interesse hoje</string>
    <string name="title_laundry">Lavanderia</string>
    <string name="sub_title_laundry">Acrescente a quantidade de roupas</string>
    <string name="label_clothes">Roupas</string>
    <string name="label_wash_detail">Detalhes da lavagem</string>
    <string name="label_bags_type">Quantas bags serão?</string>
    <string name="label_which_product">Qual produto iremos usar?</string>
    <string name="label_aproximated_amount">Valor aproximado</string>
    <string name="label_amount_value">R$ 0,00</string>
    <string name="button_solicitation_value">Adicionar na cesta</string>
    <string name="label_bubbles_powder">Sabão em pó</string>
    <string name="label_bubbles_liquid">Sabão liquido</string>
    <string name="label_softener">Amaciante</string>
    <string name="value_basket">0</string>
    <string name="label_wash_machine">Lavagem na máquina</string>
    <string name="label_dry_wash">Lavagem à seco</string>
    <string name="label_switch_button_enable"><b>Ative</b> para ganhar uma grana</string>
    <string name="label_switch_button_disabled"><b>Desative</b> para lavar sua roupa</string>
    <string name="label_quantity">0</string>

    <string name="title_activity_maps">Map</string>
    <string name="label_address">Coloque seu endereço</string>
    <string name="label_address_hint">ex. Rua Alves de Souza</string>
    <string name="text_button_washi">Quero usar o Washi</string>
    <string name="label_fav_email">Agora, seu e-mail preferido</string>
    <string name="label_person_telephone">Um telefone da sua escolha</string>
    <string name="mask_hint_telephone">(xx) XXXXX-XXXX</string>
    <string name="label_address_number">Agora, o número</string>
    <string name="label_hint_address_number">Só não pode ser igual a 0</string>
    <string name="label_title_address_neighborhood">Qual bairro vive hoje?</string>
    <string name="label_hint_neogborhood">Seu bairro aqui</string>
    <string name="label_person_city">Em que cidade mora?</string>
    <string name="label_hint_tv_label_title_person_city">Coloca aqui para a gente</string>
    <string name="label_person_state">Coloque aqui e terminamos. Ufa!</string>
    <string name="label_title_person_state">Por fim, seu estado</string>
    <string name="label_title_person_name">Como podemos te chamar?</string>
    <string name="label_hint_person_name">Nome e sobrenome</string>
    <string name="label_person_document">Qual é o seu documento?</string>
    <string name="label_hint_person_document">(Pode ser o CPF ou o CNPJ)</string>
    <string name="label_person_password">Escolha uma senha</string>
    <string name="label_hint_person_password">Mas, tem que ser aquela senha!</string>
    <string name="label_person_zone">Informe seu CEP</string>
    <string name="label_hint_zone">XXXXX-XXX</string>
    <string name="label_title_type_wash">Escolha o tipo de lavagem</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_address_delivery">Rua Alves de Souza</string>
    <string name="label_number_delivery">Número:</string>
    <string name="label_delivery_zone">CEP:</string>
    <string name="label_title_bag">bag</string>
</resources>
