<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_product_type"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/tv_label_product"
    android:layout_marginTop="10dp"
    android:orientation="horizontal">

    <RadioButton
        android:id="@+id/rb_op_product_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:buttonTint="@android:color/white"
        android:fontFamily="@font/roboto_light"
        android:text="@string/label_bubbles_powder"
        android:textColor="@android:color/white"
        android:textSize="14sp" />

    <RadioButton
        android:id="@+id/rb_op_product_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="40dp"
        android:buttonTint="@android:color/white"
        android:fontFamily="@font/roboto_light"
        android:text="@string/label_bubbles_liquid"
        android:textColor="@android:color/white"
        android:textSize="14sp" />

    <RadioButton
        android:id="@+id/rb_op_product_three"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rb_op_product_one"
        android:layout_marginStart="15dp"
        android:buttonTint="@android:color/white"
        android:fontFamily="@font/roboto_light"
        android:text="@string/label_softener"
        android:textColor="@android:color/white"
        android:textSize="14sp" />
</RelativeLayout>