<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="525dp"
    android:background="@color/colorAccent"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_label_person_state"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/roboto_light"
        android:text="@string/label_title_person_state"
        android:textColor="@color/colorTextWhite87"
        android:textSize="28sp"
        tools:text="Por fim, seu estado" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_person_state"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/tv_label_person_state"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:background="@null"
        android:fontFamily="@font/roboto_light"
        android:hint="@string/label_person_state"
        android:inputType="text"
        android:textColor="@color/colorTextWhite87"
        android:textColorHint="@color/colorTextWhite54"
        android:textCursorDrawable="@drawable/editext_cursor"
        android:textSize="24sp" />

    <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
        android:id="@+id/cpb_submit_person"
        android:layout_width="200dp"
        android:layout_height="55dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/button_shape"
        android:gravity="center"
        android:text="@string/text_button_washi"
        android:textColor="@color/colorTextWhite87"
        app:backgroundTint="@color/colorAccent"
        app:spinning_bar_color="#FFF"
        app:spinning_bar_padding="6dp"
        app:spinning_bar_width="4dp" />
</RelativeLayout>