<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cv_card_delivery"
    android:layout_width="match_parent"
    android:layout_height="86dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="4dp"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardCornerRadius="4dp"
    app:cardElevation="4dp"
    app:cardMaxElevation="4dp"
    app:cardPreventCornerOverlap="false"
    app:cardUseCompatPadding="false">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_initial_delivery"
            android:layout_width="86dp"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:background="@color/colorAccent"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/tv_initial_delivery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/iv_initial_delivery"
            android:layout_alignEnd="@+id/iv_initial_delivery"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:fontFamily="sans-serif-medium"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="30sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_delivery_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:layout_toEndOf="@+id/iv_initial_delivery"
            android:ellipsize="end"
            android:fontFamily="sans-serif"
            android:maxLines="1"
            android:text="@string/label_address_delivery"
            android:textColor="@android:color/holo_orange_dark"
            android:textSize="14sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_delivery_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_delivery_address"
            android:layout_alignStart="@+id/tv_delivery_address"
            android:fontFamily="sans-serif-medium"
            android:text="@string/label_number_delivery"
            android:textColor="@android:color/black"
            android:textSize="12sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_delivery_zone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/tv_delivery_address"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="12dp"
            android:fontFamily="sans-serif"
            android:text="@string/label_delivery_zone"
            android:textColor="@color/colorAccent"
            android:textSize="12sp" />

    </RelativeLayout>
</androidx.cardview.widget.CardView>